--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,6 +57,23 @@ body{background: url(../images/bg.jpg) no-repeat left top;display: none;}
 	}
 	.logo{width: 198px;height: 82px;bottom: 0;right: 25px;}
 }
+.search-page{
+	width:100%;height:100%;
+	.bg{width:1920px;height:3408px;background:url(../images/bigbg.jpg) no-repeat center center;position:absolute;left:50%;top:50%;margin-left:-1920px/$m;margin-top:-3408px/$m;}
+	.tip{width:268px;height:242px;background:url(../images/tip.png) no-repeat;background-size:100% 100%;top:50%;left:50%;margin-left:-268px/$m;margin-top:-242px/$m;}
+	.cloud{width:1280px;height:311px;background:url(../images/cloud.png) no-repeat;background-size:auto 100%;bottom:0;left:50%;margin-left:-614px;}
+	.cup{width: 196px/$n;height: 337px/$n;background: url(../images/cup2.png) no-repeat;backgorund-size:100%;bottom: 0px/$n;left: 35px/$n;}
+	.vaseline{width:232px;height:229px;background: url(../images/vaseline_1.png) no-repeat;backgorund-size:100% 100%;left:320px;top:500px;z-index:3;
+		img{animation:opacity 1.5s forwards ease-in-out infinite}
+	}
+	.vaseline_logo{
+		width:468px;height:250px;background: url(../images/vaseline_3.png) no-repeat;backgorund-size:100% 100%;left:320px;top:500px;opacity:0;z-index:1;
+		.star2{animation:opacity 1.2s forwards ease-in-out infinite}
+	}
+}
+.scan{
+	width:100%;height:100%;background:url(../images/pb.jpg) no-repeat;
+}
 /*animation*/
 @keyframes circle{
 	0%{opacity: 0;-webkit-transform:scale(0.5) rotate(0deg)}
