--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,8 +5,8 @@ $m:2;
 
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0;-moz-user-select:none;}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}a,div{margin:0;padding:0}
 /*normalize.css end*/
-* {webkit-user-select:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0); -moz-tap-highlight-color:rgba(0, 0, 0, 0); -ms-touch-action:none;-moz-user-select:-moz-none;-webkit-touch-callout: none; margin:0;padding:0;}
-body{background: url(../images/bg.jpg) no-repeat left top;display: none;}
+* {-webkit-user-select:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0); -moz-tap-highlight-color:rgba(0, 0, 0, 0); -ms-touch-action:none;-moz-user-select:-moz-none;-webkit-touch-callout: none; margin:0;padding:0;}
+body{background: url(../images/bg.jpg) no-repeat left top;display: none;max-width: 640px;margin: 0 auto;}
 .none{display: none;}
 .ab{position: absolute;}
 .loading{width: 100%;z-index: 999;transition:opacity 0.3s;
@@ -20,18 +20,18 @@ body{background: url(../images/bg.jpg) no-repeat left top;display: none;}
 .loading,.cover{
 	.title{width: 498px/$n;height: 176px/$n;left: 50%;margin-left: -498px/$m;top:2%;}
 }
-.cover{width: 100%;height: 100%;transition:opacity 0.3s;
-	.yun-content{width: 100%;height: 100%;z-index: 10;display: none;}
-	.yun{width: 100%;height: 100%;background: url(../images/sprite.png);background-position: 0 0;}
-	.yun1{background-position: 0 0;}
-	.yun2{background-position: -640px/$n 0;}
-	.yun3{background-position: -1280px/$n 0;}
-	.yun4{background-position: 0 -1136px/$n;}
-	.yun5{background-position: -640px/$n -1136px/$n;}
-	.yun6{background-position: -1280px/$n -1136px/$n;}
-	.yun7{background-position: 0 -2272px/$n;}
+.cover{width: 100%;height: 100%;transition:opacity 0.3s;opacity: 0;z-index: 100;
+	.yun-content{width: 100%;height: 100%;z-index: 10;}
+	.yun{width: 100%;height: 100%;background: url(../images/sprite.png);background-position: 0 0;transition:all 0.6s ease-in-out;}
+	.yun1{background-position: 0 0;transition-delay:0s;}
+	.yun2{background-position: -640px/$n 0;transition-delay:0s;} 
+	.yun3{background-position: -1280px/$n 0;transition-delay:0.3s;}
+	.yun4{background-position: 0 -1136px/$n;transition-delay:0.3s;}
+	.yun5{background-position: -640px/$n -1136px/$n;transition-delay:0.6s;}
+	.yun6{background-position: -1280px/$n -1136px/$n;transition-delay:0.6s;}
+	.yun7{background-position: 0 -2272px/$n;transition-delay:0.6s;}
 	.cup{width: 232px/$n;height: 479px/$n;background: url(../images/sprite.png) no-repeat;background-position: -640px/$n -2272px/$n;z-index: 11;top: auto;bottom: -10px/$n;left: 35px/$n;}
-	.brands{width: 100%;height: 920px;top: 210px;z-index: 9;overflow: hidden;
+	.brands{width: 100%;height: 920px;top: 210px;z-index: 9;overflow: hidden;display: none;
 		.light-content{width: 100%;height: 100%;z-index: 1;}
 		.light{width: 100%;height: 100%;background: url(../images/light.png);background-position: 0 0;opacity: 0.2;}
 		.light1{background-position: 0 0;}
@@ -58,21 +58,82 @@ body{background: url(../images/bg.jpg) no-repeat left top;display: none;}
 	.logo{width: 198px;height: 82px;bottom: 0;right: 25px;}
 }
 .search-page{
-	width:100%;height:100%;
+	width:100%;height:100%;overflow: hidden;display: none;z-index: 90;
 	.bg{width:1920px;height:3408px;background:url(../images/bigbg.jpg) no-repeat center center;position:absolute;left:50%;top:50%;margin-left:-1920px/$m;margin-top:-3408px/$m;}
 	.tip{width:268px;height:242px;background:url(../images/tip.png) no-repeat;background-size:100% 100%;top:50%;left:50%;margin-left:-268px/$m;margin-top:-242px/$m;}
 	.cloud{width:1280px;height:311px;background:url(../images/cloud.png) no-repeat;background-size:auto 100%;bottom:0;left:50%;margin-left:-614px;}
-	.cup{width: 196px/$n;height: 337px/$n;background: url(../images/cup2.png) no-repeat;backgorund-size:100%;bottom: 0px/$n;left: 35px/$n;}
-	.vaseline{width:232px;height:229px;background: url(../images/vaseline_1.png) no-repeat;backgorund-size:100% 100%;left:320px;top:500px;z-index:3;
+	.cup{width: 196px/$n;height: 337px/$n;background: url(../images/cup2.png) no-repeat;background-size:100%;bottom: 0px/$n;left: 35px/$n;}
+	.vaseline{width:232px;height:229px;background: url(../images/vaseline_1.png) no-repeat;background-size:100% 100%;left:320px;top:500px;z-index:3;
 		img{animation:opacity 1.5s forwards ease-in-out infinite}
 	}
 	.vaseline_logo{
-		width:468px;height:250px;background: url(../images/vaseline_3.png) no-repeat;backgorund-size:100% 100%;left:320px;top:500px;opacity:0;z-index:1;
+		width:468px;height:250px;background: url(../images/vaseline_3.png) no-repeat;background-size:100% 100%;left:320px;top:500px;opacity:0;z-index:1;
 		.star2{animation:opacity 1.2s forwards ease-in-out infinite}
 	}
 }
 .scan{
-	width:100%;height:100%;background:url(../images/pb.jpg) no-repeat;
+	width:100%;height:100%;background:url(../images/pb.jpg) no-repeat;display: none;z-index: 80;
+	.title{width: 100%;height: 98px;background: url(../images/vt.png) no-repeat;top: 5%;}
+	.scan-box{width: 100%;height: 656px;top: 18%;background: url(../images/lk.png) no-repeat;
+		.k{width: 100%;height: 100%;background: url(../images/k.png) no-repeat;}
+		.kl{width: 100%;height: 5px;background: url(../images/kl.png) no-repeat;top: 10px;}
+	}
+	.explore{width: 216px;height: 176px;background: url(../images/button.png) no-repeat;left: 50%;margin-left: -216px/$m;bottom: 1%;}
+}
+.swiper-container{width: 100%;height: 100%;position: absolute;display: none;z-index: 70;}
+.swiper-slide{width:100%;height:100%;overflow:hidden;position:relative;background:url(../images/pb.jpg) no-repeat;background-size: 100%;}
+#product{
+	.pst{width: 100%;height: 100%;position: absolute;z-index: 1;background:url(../images/pst.png) no-repeat;}
+	.title{width: 100%;height: 316px;z-index: 5;position: absolute;}
+	.productPic{width: 100%;height: 829px;z-index: 4;position: absolute;top: 270px;}
+	.view{width: 60px;height: 60px;background: url(../images/add.png) no-repeat;background-size: 100% 100%;position: absolute;top: 100px;left: 320px;}
+	.view{animation:scale  1.5s forwards ease-in-out infinite}
+	&.on{
+		.view{animation:scale  1.5s forwards ease-in-out infinite}
+		.pst{animation:opacity 1.2s forwards ease-in-out infinite}
+		.arrow{animation:arrow 1.2s forwards ease-in-out infinite}
+	}
+	.reason{z-index: 7;width: 100%;height: 100%;position: absolute;background: rgba(0,0,0,0.5);transform:translate3d(0,-100%,0);transition:all 0.6s ease-in-out;
+		.reason-content{position: absolute;top: auto;width: 100%;height: 790px;top: 50%;margin-top: -700px/$m;
+			.close{width: 100px;height: 100px;position: absolute;right: 35px;top: 0;}
+		}
+		&.on{transform:translate3d(0,0,0);}
+	}
+	.arrow{width: 128px;height: 128px;background: url(../images/arrow.png) no-repeat;left: 50%;margin-left: -128px/$m;bottom: 0;position: absolute;z-index: 5;transform:translateZ(5px);}
+}
+#wish{
+	.wishstar{width: 100%;height: 100%;position: absolute;background:url(../images/wishstar.png) no-repeat;}
+	.logo{width: 261px;height: 227px;background: url(../images/logo3.png);position: absolute;top: 5px;right: 0px;}
+	.wishtitle{display: none;width: 100%;height: 348px;position: absolute;top: 120px;left: -10px;}
+	.wishbtn{width: 204px;height: 204px;background: url(../images/wishbtn.png);position: absolute;left: 50%;margin-left: -204px/$m;bottom: 0;}
+	.form{
+		position: absolute;width: 100%;top: 470px;display: none;
+		p{font-size: 34px;color: #fff;width: 100%;text-align: center;line-height: 40px;}
+		.formitem{width: 450px;margin: 0 auto;margin-top: 15px;font-size: 30px;color: #fff;text-align: left;vertical-align: top;
+			border: 1px solid #fff;box-shadow: 1px 1px #4040ff;border-radius: 5px;padding-left: 10px;
+			input{border:none;display: inline-block;height: 60px;line-height: 60px;width: 340px;margin-left: 10px;font-size: 30px;background: none;}
+			textarea{border:none;display: inline-block;height: 80px;margin-left: 10px;background: none;}
+		}
+	}
+	.lx{
+		width: 251px;height: 278px;background: url(../images/lx.png) no-repeat;position: absolute;display: block;
+		&.lx1{top: -270px;right: 47px;}
+		&.lx2{top: 40px;right: -235px;}
+		&.lx3{top: 60px;left: 50%;margin-left: -85px;opacity: 0;}
+	}
+	.bs{width: 243px;height: 241px;top: 100px;background: url(../images/bs.png) no-repeat;position: absolute;left: 50%;margin-left: -240px/$m;opacity: 0;}
+	&.on{
+		.wishstar{animation:opacity 1.2s forwards ease-in-out infinite}
+		.lx.lx1{animation:lx1 4s forwards ease-in-out infinite}
+		.lx.lx2{animation:lx2 4s 3s forwards ease-in-out infinite}
+	}
+	.share{position: absolute;width: 255px;height: 197px;background: url(../images/share.png) no-repeat;right: 0;top: 0;display: none;}
+	.logo,.wishbtn,.bs,.lx3{transition:all 0.6s ease-in-out;}
+	.bs.on,.lx3.on{opacity: 1;}
+	&.on.animate{
+		.lx.lx1{animation:none;}
+		.lx.lx2{animation:none;}
+	}
 }
 /*animation*/
 @keyframes circle{
@@ -84,4 +145,20 @@ body{background: url(../images/bg.jpg) no-repeat left top;display: none;}
 	0%{opacity: 0.2;}
 	45%,55%{opacity: 1;}
 	100%{opacity: 0.2;}
+}
+@keyframes scale{
+	0%,100%{transform:scale(1);}
+	50%{transform:scale(1.2);}
+}
+@keyframes arrow{
+	0%,100%{transform:translateY(0px);}
+	50%{transform:translateY(5px);}
+}
+@keyframes lx1{
+	0%{transform:translate3d(0,0,0);}
+	100%{transform:translate3d(-640px,500px,0);}
+}
+@keyframes lx2{
+	0%{transform:translate3d(0,0,0);}
+	100%{transform:translate3d(-840px,800px,0);}
 }
