--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 .audio{width: 60px;height: 60px;position: absolute;z-index: 200;top: 50px;right: 22px;background-image: url(../images/audio-c.png);background-repeat: no-repeat;background-size: 100% 100%;display: none;
     &.on{background-image: url(../images/audio.png);}
 }
-.loading{width: 100%;height: 100%;z-index: 999;transition:opacity 0.3s;
+.loading{width: 100%;height: 100%;z-index: 999;transition:opacity 1s ease-in-out;
 	img{width: 100%;}
 	.bg{width: 100%;height: 100%;background: url(../images/loading.png);background-position: 0 0;
 		&.bg2{background-position: 0 1136px;animation:l2r 4s forwards linear infinite}
@@ -27,7 +27,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 	.star{width: 63px/$n;height: 57px/$n;left: 165px;top: 528px/$n;background: url(../images/star.png) no-repeat;
 		animation:circle 4s forwards ease-in-out infinite}
 	.logo{width: 166px/$n;height: 66px/$n;left: 50%;margin-left: -166px/$m;top: 43.8%;opacity: 0;transition:all 1s 1s ease-in-out;}
-	.loadingpercent{width: 100%;text-align: center;color: #fff;top: 49.8%;font-size: 24px;opacity: 0;transition:all 1s 1.6s ease-in-out;}
+	.loadingpercent{width: 100%;text-align: center;color: #fff;top: 49.8%;font-size: 24px;/* opacity: 0;transition:all 1s 1.6s ease-in-out; */}
 }
 .loading,.cover{
 	.title{width: 498px/$n;height: 176px/$n;left: 50%;margin-left: -498px/$m;top:2%;}
@@ -39,7 +39,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		.logo{opacity: 1;}
 	}
 }
-.cover{width: 100%;height: 100%;transition:opacity 0.3s,-webkit-transform 1.5s ease-in;opacity: 0;z-index: 100;overflow: hidden;
+.cover{width: 100%;height: 100%;transition:opacity 1s ease-in-out,-webkit-transform 1.5s ease-in;opacity: 0;z-index: 100;overflow: hidden;
 	.yun-content{width: 100%;height: 100%;z-index: 10;}
 	.yun{width: 1215px;height: 1136px;background-position: 0 0;transition:all 1.8s ease-in;top: 0;left: -276px;}
 	.yun1{background-image: url(../images/y1.png);transition-delay:0.8s;}
