--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,7 +110,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 	&.out{-webkit-transform:translate3d(0,-1888px,0);opacity: 0;}
 }
 .search-page{
-	width:100%;height:100%;overflow: hidden;display: none;z-index: 90;transition:/* -webkit-transform 1s linear, */opacity 1s linear;/* -webkit-transform:translate3d(0,880px,0); */
+	width:100%;height:100%;overflow: hidden;z-index: 90;transition:/* -webkit-transform 1s linear, */opacity 1s linear;/* -webkit-transform:translate3d(0,880px,0); */
 	#wrapper {
 		position: absolute;
 		z-index: 4;
@@ -124,8 +124,8 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 	#scroller {
 		position: absolute;
 		z-index: 3;
-		width: 3520px;
-		height: 6808px;
+		width:1920px;
+		height: 3000px;
 		overflow: hidden;
 		-webkit-tap-highlight-color: rgba(0,0,0,0);
 		-webkit-transform: translateZ(0);
@@ -143,8 +143,9 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		-ms-text-size-adjust: none;
 		-o-text-size-adjust: none;
 		text-size-adjust: none;
-		background: url(../images/us.png) repeat;
 	}
+	.bg{position: absolute;width: 100%;height: 100%;top: 0;left: 0;background: url(../images/xg.png) no-repeat;
+		animation:opacity 3s infinite forwards ease-in-out;}
 
 	.starfield {
 		position: absolute;
@@ -155,7 +156,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		overflow: hidden;
 	}
 
-	.starfield div {
+	.starfield .stars1,.starfield .stars2 {
 		position: absolute;
 		width: 100%;
 		overflow: hidden;
@@ -171,26 +172,20 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 	}
 
 	#stars1 {
-		z-index: 1;width:1920px;
-		height: 3408px;
-		background: url(../images/bigbg.jpg) no-repeat;
+		z-index: 2;width: 960px;
+		height: 1704px;
+		background: url(../images/us.png) repeat;
 	}
-	
-		//.bg{width:1920px;height:3408px;background:url(../images/bigbg.jpg) no-repeat center center;position:absolute;left:50%;top:50%;margin-left:-1920px/$m;margin-top:-3408px/$m;}
-		/* .bgs{width: 1920px;height: 3408px;position: absolute;background-repeat: no-repeat;background-size: 100% 100%;
-			&.bgs1{background-image: url(../images/bgs1.png);animation:opacity 1.5s forwards ease-in-out infinite}
-			&.bgs2{background-image: url(../images/bgs2.png);animation:opacity 1.5s 0.5s forwards ease-in-out infinite}
-			&.bgs3{background-image: url(../images/bgs3.png);animation:opacity 1.5s 1s forwards ease-in-out infinite}
-		} */
-		 /* .us{width: 1920px;height: 3408px;position: absolute;background:url(../images/us.png) repeat;opacity: 0;transition:opacity 0.6s;
-		 	&.on{
-		 		opacity: 1;animation:alltransform 20s infinite forwards linear;
-		 	}
-		 	
-		  	} */
-		/* .cab{z-index: 1;} */
-		/* .bg{z-index: 3;}  */
-	.tip{z-index: 4;width:268px;height:242px;background:url(../images/tip.png) no-repeat;background-size:100% 100%;top:280px;left:180px;opacity: 0;transition:all 0.6s 1s ease-in-out;
+	#starfield2 {
+		z-index: 1;
+	}
+
+	#stars2 {
+		z-index: 1;width:1920px;
+		height: 3000px;
+		background: url(../images/b2.jpg) no-repeat;
+	}
+	.tip{z-index: 4;width:152px;height:220px;background:url(../images/tip.png) no-repeat;background-size:100% 100%;top:120px;left:365px;opacity: 0;transition:all 0.6s 1s ease-in-out;
 		&.on{opacity: 1;}
 	}
 	.cloud{z-index: 4;width:1280px;height:311px;background:url(../images/cloud.png) no-repeat;background-size:auto 100%;bottom:0;left:50%;margin-left:-614px;opacity: 0;transform:translate3d(0,100px,0)}
@@ -198,7 +193,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 	.cloud,.cup{transition:all 1s ease-in-out;
 		&.on{opacity: 1;transform:translate3d(0,0,0);}
 	}
-	.vaseline{width:225px;height:225px;/* background: url(../images/vaseline_s2.png) no-repeat;background-size:100% 100%; */right:220px;bottom:600px;z-index:3;
+	.vaseline{width:225px;height:225px;/* background: url(../images/vaseline_s2.png) no-repeat;background-size:100% 100%; */right:220px;bottom:400px;z-index:3;
 		img{width: 100%;height: 100%;position: absolute;}
 		#vs{animation:vs 4s forwards ease-in-out infinite}
 		#sl{animation:sl 4s forwards ease-in-out infinite;opacity: 0.5;}
@@ -206,7 +201,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		//img{animation:opacity 1.5s forwards ease-in-out infinite}
 	}
 	.vaseline_tip{
-		width:468px;height:250px;right:120px;bottom:550px;z-index:1;
+		width:468px;height:250px;right:120px;bottom:300px;z-index:1;
 		.star2{animation:opacity 1.2s forwards ease-in-out infinite}
 	}
 	.vaseline_logo{
@@ -291,7 +286,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 			&.txt{height: 100px;}
 		}
 	}
-	.wishsucc{font-size: 34px;line-height: 45px;color: #fff;width: 100%;height: 135px;position: absolute;top: 50%;margin-top: -136px/$m;text-align: center;opacity: 0;z-index: 1;
+	.wishsucc{font-size: 34px;line-height: 45px;color: #fff;width: 100%;height: 180px;position: absolute;top: 50%;margin-top: -260px/$m;text-align: center;opacity: 0;z-index: 1;
 		transition:all 0.8s ease-in-out;
 		&.on{opacity: 1;}
 	}
@@ -299,7 +294,7 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		width: 144px;height: 127px;background-image: url(../images/lx.png);background-repeat:no-repeat;background-size: 100% 100%;position: absolute;display: block;
 		&.lx1{top: -130px;right: 47px;}
 		&.lx2{top: 40px;right: -125px;z-index: 1;}
-		&.lx3{width: 110px;height: 104px;top: 105px;left: 330px;opacity: 0;}
+		&.lx3{width: 243px;height: 241px;/* width: 110px;height: 104px; */top: 38px;left: 250px;opacity: 0;}
 	}
 	.bs{width: 243px;height: 241px;top: 100px;background: url(../images/bs.png) no-repeat;position: absolute;left: 50%;margin-left: -240px/$m;opacity: 0;}
 	&.on{
@@ -307,7 +302,9 @@ body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margi
 		.lx.lx1{animation:lx1 4s forwards ease-in-out infinite}
 		.lx.lx2{animation:lx2 4s 3s forwards ease-in-out infinite}
 	}
-	.share{position: absolute;width: 255px;height: 197px;background: url(../images/share.png) no-repeat;right: 0;top: 0;display: none;}
+	.share{position: absolute;width: 212px;height: 204px;background: url(../images/share.png) no-repeat top right;right: 0;top: 0;display: none;transition:all 0.8s 0.8s ease-in-out;
+		.sstar{position: absolute;bottom:0;left:0;width: 51px;height: 61px;background: url(../images/share3.png) no-repeat;animation:opacity 1.5s infinite forwards ease-in-out;}
+	}
 	.wishbtn{transition:-webkit-transform 1s ease-in-out,opacity 0.5s 1s ease-in-out;}
 	.logo{transition:all 0.6s ease-in-out;}
 	.bs,.lx3{transition:all 1s ease-in-out;}
