--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,13 +10,13 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
     -webkit-touch-callout: none;
     -webkit-user-select: none;
 } 
-body{background: url(../images/bg.jpg) no-repeat left top;max-width: 640px;margin: 0 auto;overflow: hidden;}
+body{background: url(../images/bg.jpg) no-repeat center center;position: relative;max-width: 640px;margin: 0 auto;overflow: hidden;}
 .none{display: none;}
 .ab{position: absolute;}
 .audio{width: 60px;height: 60px;position: absolute;z-index: 200;top: 50px;right: 22px;background-image: url(../images/audio-c.png);background-repeat: no-repeat;background-size: 100% 100%;display: none;
     &.on{background-image: url(../images/audio.png);}
 }
-.loading{width: 100%;height: 100%;background: url(../images/bg.jpg) no-repeat left top;z-index: 999;transition:opacity 1s ease-in-out;
+.loading{width: 100%;height: 100%;background: url(../images/bg.jpg) no-repeat;z-index: 999;transition:opacity 1s ease-in-out;
 	img{width: 100%;}
 	.bg{width: 100%;height: 100%;background: url(../images/loading.png);background-position: 0 0;
 		&.bg2{background-position: 0 1136px;animation:l2r 4s forwards linear infinite}
